Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10273

Crash in QtDeclarative refcount

XMLWordPrintable

    • 0b82b54c248eebcf87a01fc72d4089787848b7a2 qttools: 8334921061a3e4cfc5ce08e5a837564d40f70714 revert of tool fix: f7f37e7fa2d98f777cc7b6035bb6ff924c75e1fa., Revert of revert in qttools: a60aa90f5ca00e32a

      I couldn't reproduce it right away, but this is the crash I got:

      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   QtDeclarative                 	0x0000000113652ab4 QDeclarativeRefCount::release() + 4
      1   QtDeclarative                 	0x000000011360b7ed QDeclarativeData::destroyed(QObject*) + 141
      2   QtCore                        	0x0000000100e000f0 QObject::~QObject() + 336
      3   QtQml                         	0x000000010d10a6b9 QQmlDelegateModelItem::~QQmlDelegateModelItem() + 121
      4   QtQml                         	0x000000010ce79f3c QQmlDMAbstractItemModelData::~QQmlDMAbstractItemModelData() + 140
      5   QtQml                         	0x000000010d10183c QQmlDelegateModelPrivate::release(QObject*) + 364
      6   QtQuick                       	0x000000010cb28cbe QQuickRepeater::clear() + 190
      7   QtQuick                       	0x000000010cb28ee3 QQuickRepeater::regenerate() + 35
      8   QtQuick                       	0x000000010cb29925 QQuickRepeater::modelUpdated(QQmlChangeSet const&, bool) + 69
      9   QtQuick                       	0x000000010cbcfb23 QQuickRepeater::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 707
      10  QtCore                        	0x0000000100e07f77 QMetaObject::activate(QObject*, int, int, void**) + 2407
      11  QtQml                         	0x000000010d137643 QQmlInstanceModel::modelUpdated(QQmlChangeSet const&, bool) + 67
      12  QtQml                         	0x000000010d106609 non-virtual thunk to QQmlDelegateModelPrivate::emitModelUpdated(QQmlChangeSet const&, bool) + 25
      13  QtQml                         	0x000000010d100937 QQmlDelegateModelPrivate::emitChanges() + 295
      14  QtQml                         	0x000000010d106b6f QQmlDelegateModel::_q_modelReset() + 479
      15  QtQml                         	0x000000010d1352af QQmlDelegateModel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 559
      16  QtQml                         	0x000000010d13556e QQmlDelegateModel::qt_metacall(QMetaObject::Call, int, void**) + 94
      17  QtCore                        	0x0000000100e07cfe QMetaObject::activate(QObject*, int, int, void**) + 1774
      18  QtCore                        	0x0000000100d90a4d QAbstractItemModel::endResetModel() + 317
      19  libProjectExplorer_debug.dylib	0x000000010bea001b ProjectExplorer::Internal::ProjectModel::resetProjects() + 43 (projectwelcomepage.cpp:206)
      20  libProjectExplorer_debug.dylib	0x000000010bed19c4 ProjectExplorer::Internal::ProjectModel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 68 (moc_projectwelcomepage.cpp:179)
      21  QtCore                        	0x0000000100e07f77 QMetaObject::activate(QObject*, int, int, void**) + 2407
      22  libProjectExplorer_debug.dylib	0x000000010bea382b ProjectExplorer::ProjectExplorerPlugin::recentProjectsChanged() + 43 (moc_projectexplorer.cpp:733)
      23  libProjectExplorer_debug.dylib	0x000000010bc5a0da ProjectExplorer::ProjectExplorerPlugin::addToRecentProjects(QString const&, QString const&) + 922 (projectexplorer.cpp:2578)
      24  libProjectExplorer_debug.dylib	0x000000010bc591f4 ProjectExplorer::ProjectExplorerPlugin::openProject(QString const&, QString*) + 388 (projectexplorer.cpp:1332)
      25  libProjectExplorer_debug.dylib	0x000000010bc5ce49 ProjectExplorer::ProjectExplorerPlugin::openProjectWelcomePage(QString const&) + 57 (projectexplorer.cpp:1320)
      26  libProjectExplorer_debug.dylib	0x000000010bea2a19 ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 345 (moc_projectexplorer.cpp:480)
      27  QtCore                        	0x0000000100e07f77 QMetaObject::activate(QObject*, int, int, void**) + 2407
      28  libProjectExplorer_debug.dylib	0x000000010bed1dfd ProjectExplorer::Internal::ProjectWelcomePage::requestProject(QString const&) + 77 (moc_projectwelcomepage.cpp:359)
      29  libProjectExplorer_debug.dylib	0x000000010bed1c2b ProjectExplorer::Internal::ProjectWelcomePage::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) + 107 (moc_projectwelcomepage.cpp:288)
      30  libProjectExplorer_debug.dylib	0x000000010bed204e ProjectExplorer::Internal::ProjectWelcomePage::qt_metacall(QMetaObject::Call, int, void**) + 126 (moc_projectwelcomepage.cpp:346)
      31  QtQml                         	0x000000010cfbe261 CallMethod(QObject*, int, int, int, int*, QV8Engine*, (anonymous namespace)::CallArgs&) + 4305
      32  QtQml                         	0x000000010cfbc91d CallPrecise(QObject*, QQmlPropertyData const&, QV8Engine*, (anonymous namespace)::CallArgs&) + 189
      33  QtQml                         	0x000000010cfbc557 QV4::QObjectMethod::callInternal(QV4::CallData*) + 2343
      34  QtQml                         	0x000000010cf41a8a QV4::__qmljs_call_property(QV4::ExecutionContext*, QV4::Referenced<QV4::String>, QV4::CallDataRef) + 282
      35  ???                           	0x00000001016d76dd 0 + 4318918365
      36  QtQml                         	0x000000010cf69edd QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) + 253
      37  QtQml                         	0x000000010d0ab6ed QQmlJavaScriptExpression::evaluate(QQmlContextData*, QV4::Value const&, int, QV4::Value*, bool*) + 669
      38  QtQml                         	0x000000010d035948 QQmlBoundSignalExpression::evaluate(void**) + 1960
      39  QtQml                         	0x000000010d036863 QQmlBoundSignal_callback(QQmlNotifierEndpoint*, void**) + 355
      40  QtQml                         	0x000000010d08747c QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) + 92
      41  QtQml                         	0x000000010cfdf65f QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) + 735
      42  QtCore                        	0x0000000100e076e8 QMetaObject::activate(QObject*, int, int, void**) + 216
      43  QtQml                         	0x000000010cfd89ea QQmlVMEMetaObject::metaCall(QMetaObject::Call, int, void**) + 986
      44  QtQml                         	0x000000010cfbd2d3 CallMethod(QObject*, int, int, int, int*, QV8Engine*, (anonymous namespace)::CallArgs&) + 323
      45  QtQml                         	0x000000010cfbca59 CallPrecise(QObject*, QQmlPropertyData const&, QV8Engine*, (anonymous namespace)::CallArgs&) + 505
      46  QtQml                         	0x000000010cfbc557 QV4::QObjectMethod::callInternal(QV4::CallData*) + 2343
      47  QtQml                         	0x000000010cf41a8a QV4::__qmljs_call_property(QV4::ExecutionContext*, QV4::Referenced<QV4::String>, QV4::CallDataRef) + 282
      48  ???                           	0x00000001016d757b 0 + 4318918011
      49  QtQml                         	0x000000010cf69edd QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) + 253
      50  QtQml                         	0x000000010d0ab6ed QQmlJavaScriptExpression::evaluate(QQmlContextData*, QV4::Value const&, int, QV4::Value*, bool*) + 669
      51  QtQml                         	0x000000010d035948 QQmlBoundSignalExpression::evaluate(void**) + 1960
      52  QtQml                         	0x000000010d036863 QQmlBoundSignal_callback(QQmlNotifierEndpoint*, void**) + 355
      53  QtQml                         	0x000000010d08747c QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) + 92
      54  QtQml                         	0x000000010cfdf65f QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) + 735
      55  QtCore                        	0x0000000100e076e8 QMetaObject::activate(QObject*, int, int, void**) + 216
      56  QtQuick                       	0x000000010cbcbd20 QQuickMouseArea::clicked(QQuickMouseEvent*) + 64
      57  QtQuick                       	0x000000010cb131c2 QQuickMouseArea::setPressed(Qt::MouseButton, bool) + 562
      58  QtQuick                       	0x000000010cb13a4d QQuickMouseArea::mouseReleaseEvent(QMouseEvent*) + 157
      59  QtQuick                       	0x000000010ca93a99 QQuickWindow::sendEvent(QQuickItem*, QEvent*) + 377
      60  QtQuick                       	0x000000010ca95fc3 QQuickWindowPrivate::deliverMouseEvent(QMouseEvent*) + 115
      61  QtQuick                       	0x000000010ca960b3 QQuickWindow::mouseReleaseEvent(QMouseEvent*) + 35
      62  QtGui                         	0x0000000100764c16 QWindow::event(QEvent*) + 518
      63  QtQuick                       	0x000000010ca94a96 QQuickWindow::event(QEvent*) + 438
      64  QtWidgets                     	0x000000010010e9ec QApplicationPrivate::notify_helper(QObject*, QEvent*) + 300
      65  QtWidgets                     	0x00000001001114dd QApplication::notify(QObject*, QEvent*) + 6157
      66  QtCore                        	0x0000000100dd7402 QCoreApplication::notifyInternal(QObject*, QEvent*) + 114
      67  QtGui                         	0x0000000100759efb QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2043
      68  QtGui                         	0x0000000100759239 QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) + 105
      69  QtGui                         	0x0000000100749dd8 QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 136
      70  libqcocoa.dylib               	0x000000010523dcf7 QCocoaEventDispatcherPrivate::processPostedEvents() + 295
      71  libqcocoa.dylib               	0x000000010523e7af QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 31
      72  com.apple.CoreFoundation      	0x00007fff9694cb31 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      73  com.apple.CoreFoundation      	0x00007fff9694c455 __CFRunLoopDoSources0 + 245
      74  com.apple.CoreFoundation      	0x00007fff9696f7f5 __CFRunLoopRun + 789
      75  com.apple.CoreFoundation      	0x00007fff9696f0e2 CFRunLoopRunSpecific + 290
      76  com.apple.HIToolbox           	0x00007fff935c1eb4 RunCurrentEventLoopInMode + 209
      77  com.apple.HIToolbox           	0x00007fff935c1b94 ReceiveNextEventCommon + 166
      78  com.apple.HIToolbox           	0x00007fff935c1ae3 BlockUntilNextEventMatchingListInMode + 62
      79  com.apple.AppKit              	0x00007fff98a91533 _DPSNextEvent + 685
      80  com.apple.AppKit              	0x00007fff98a90df2 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 128
      81  com.apple.AppKit              	0x00007fff98a881a3 -[NSApplication run] + 517
      82  libqcocoa.dylib               	0x000000010523d555 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2373
      83  QtCore                        	0x0000000100dd48fe QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 398
      84  QtCore                        	0x0000000100dd799d QCoreApplication::exec() + 349
      85  org.qt-project.qtcreator      	0x000000010000cf3c main + 15084 (main.cpp:530)
      86  org.qt-project.qtcreator      	0x0000000100005294 start + 52
      

        For Gerrit Dashboard: QTCREATORBUG-10273
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: